# edb

./: .envrc  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  rustfmt.toml
.direnv/: flake-profile-1-link  flake-profile-10-link  flake-profile-20-link
config/: Config.yaml
proto/: edb.proto  raft.proto
sandbox/: docker-compose.yaml
src/: configuration.rs  error.rs  kvstore.rs  lib.rs  server.rs
src/client/: esql.rs
src/grpc_stub/: edb.rs  mod.rs  raft.rs
src/raft/: mod.rs
src/store/: kvstore.rs  mod.rs
