[package]
name = "edb"
version = "0.1.0"
edition = "2021"
default-run = "edb"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
nanoid = "0.4.0"
prost = "0.13.1"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
tonic = {version="0.12.1", features=["server"]}
tonic-reflection = "0.12.1"

[build-dependencies]
tonic-build = "0.12.1"

[[bin]]
name = "edb"
path = "src/bin/edb.rs"


[[bin]]
name = "esql"
path = "src/client/esql.rs"

