[package]
name = "edb"
version = "0.1.0"
edition = "2021"
default-run = "edb"

[dependencies]
clap = "4.5.11"
config = "0.14.0"
env_logger = "0.11.5"
log = "0.4.22"
nanoid = "0.4.0"
prost = "0.13.1"
serde = {version="1.0.204", features=["derive"]}
rmp-serde = "1.3"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
tonic = {version="0.12.1", features=["server"]}
tonic-reflection = "0.12.1"
crossbeam-channel = "0.5.13"
thiserror = "1.0.63"

[build-dependencies]
tonic-build = "0.12.1"

[[bin]]
name = "edb"
path = "src/bin/edb.rs"


[[bin]]
name = "esql"
path = "src/client/esql.rs"

